app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer components {
  .grayBackground {
    @apply bg-[rgb(36,36,36)];
  }
  .heroButton {
    @apply text-gray-300 py-2 px-4 hover:text-gray-100 sm:tracking-[3px];
  }
  .pageTitle {
    @apply text-lg uppercase text-gray-100 tracking-[10px];
  }
  .inputs {
    @apply bg-transparent placeholder:text-gray-400 text-white text-sm border border-gray-200 rounded-md px-3 py-2 transition duration-300 focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow;
  }
  .icons {
    @apply transition-transform duration-200 hover:scale-125;
  }
}

